doc(store):ハッシュタグ追加

--- a/src/pages/store/[slug].astro
+++ b/src/pages/store/[slug].astro
@@ -217,7 +217,7 @@ store.acf.sake_temp.forEach(temp => {
   }
   temperature.push(`<span class="sake-temp ${className}">${temp.label}</span>`);
 });
-const postLink = `https://twitter.com/intent/tweet?url=https://nga-osaka.com/store/${store.slug}%0a&text=${store.title.rendered}%0a@ngaosaka1001%0a&hashtags=日本酒ゴーアラウンド大阪`;
+const postLink = `https://twitter.com/intent/tweet?url=https://nga-osaka.com/store/${store.slug}%0a&text=${store.title.rendered}%0a@ngaosaka1001%0a&hashtags=日本酒ゴーアラウンド,日本酒ゴーアラウンド大阪`;
 ---
 
 <Layout title={ store.title.rendered }>
