--- a/src/pages/store/[slug].astro
+++ b/src/pages/store/[slug].astro
@@ -178,7 +178,9 @@ const twitter = store.acf.twitter_url ? `<li><a href="${store.acf.twitter_url}" 
 const instagram = store.acf.instagram_url ? `<li><a href="${store.acf.instagram_url}" target="_blank"><img src="/assets/images/sns-instagram.png" alt="Instagram" width="36" height="36" loading="lazy"></a></li>` : '';
 
 const snsList = (facebook || twitter || instagram) ? `<ul>${facebook + twitter + instagram}</ul>` : '';
-const googleMapSrc = `https://maps.google.co.jp/maps?output=embed&q=${store.acf.store_name}&z=16`;
+const googleMapSrc = store.acf.googlemap_fix
+  ? store.acf.googlemap_fix
+  : `<iframe width="600" height="450" class="googlemap" src="https://maps.google.co.jp/maps?output=embed&q=${store.title.rendered}&z=16"></iframe>`;
 
 const notFoundImage1 = 'https://data.nga-osaka.com/2023/wp-content/uploads/2023/08/preparation-image1-1.jpg';
 const storeImage1Url = store.acf.store_image1 ? store.acf.store_image1.url : notFoundImage1;
@@ -219,6 +221,7 @@ store.acf.sake_temp.forEach(temp => {
 });
 const postLink = `https://twitter.com/intent/tweet?url=https://nga-osaka.com/store/${store.slug}%0a&text=${store.title.rendered}%0a@ngaosaka1001%0a&hashtags=日本酒ゴーアラウンド,日本酒ゴーアラウンド大阪`;
 ---
+
 
 <Layout title={ store.title.rendered }>
   <main data-canceled={store.acf.store_canceled}>
@@ -320,10 +323,7 @@ const postLink = `https://twitter.com/intent/tweet?url=https://nga-osaka.com/sto
                 <span class="u-display-block">{store.acf.store_address1}</span>
               <span class="u-display-block">{store.acf.store_address2}</span></p>
               <p>最寄り駅：{store.acf.store_route}・{store.acf.store_station}</p>
-              <div>
-                <iframe width="600" height="450" class="googlemap" src={googleMapSrc}></iframe>
-              </div>
-            </dd>
+              <div class="googlemap" set:html={googleMapSrc} />            </dd>
           </div>
           <div class="store-spec__group">
             <dt class="store-spec__term">電話番号</dt>
