--- a/src/pages/store/[slug].astro
+++ b/src/pages/store/[slug].astro
@@ -224,7 +224,7 @@ const postLink = `https://twitter.com/intent/tweet?url=https://nga-osaka.com/sto
 
 
 <Layout title={ store.title.rendered }>
-  <main data-canceled={store.acf.store_canceled}>q
+  <main data-canceled={store.acf.store_canceled}>
     <div class="store-visual store-figure">
       <img src="/assets/images/tokkuri-tokyo.png" class="store-visual__tokkuri-image" width="721" height="1249" alt="">
       <img src={eyeCatch.source_url} alt={store.acf.store_name} class="store-visual__image" width={eyeCatch.media_details.width} height={eyeCatch.media_details.height} decoding="async">
